2018 video and link updates
batch #5

--- a/src/views/about.hbs
+++ b/src/views/about.hbs
@@ -101,7 +101,7 @@ name: story
     </p>
 
     <p>
-    As the regulators were completing the report for Lincoln, Keating was busy currying political favor. He helped raise sizable sums of money for Sens. Alan<a href="/actors/senators/Alan-Cranston">Cranston</a> (D-CA) and Donald    <a href="/actors/senators/Don-Riegle">Riegle</a> (D-MI). On March 3rd, he contributed $100,000 to America Votes (Cranston's voter
+    As the regulators were completing the report for Lincoln, Keating was busy currying political favor. He helped raise sizable sums of money for Senators <a href="/actors/senators/Alan-Cranston">Alan Cranston</a> (D-California) and <a href="/actors/senators/Don-Riegle">Donald Riegle</a> (D-Michigan). On March 3rd, he contributed $100,000 to America Votes (Cranston's voter
         registration organization). Twenty days later, he raised $78,250 for Riegle at a fund-raiser held at Keating's Detroit hotel. ACC lawyer and Keating chief
         legal counsel <a href="/actors/affiliates/James-Grogan">James Grogan</a> organized many of these events. Knowing that Gray's term was
         ending in June, the offices of Sens. Cranston, Riegle, and Dennis <a href="/actors/senators/Dennis-DeConcini">DeConcini</a> (D-AZ)
@@ -139,7 +139,7 @@ name: story
         During the later hearings, Grogan, the ACC lawyer, testified that he and Riegle met a little over a week later - around the time the senators received
         copies of the <a href="/files/exhibits/Lincoln/%233%20Arthur%20Young%20Letter%2003-17-87.pdf">Arthur Young letter</a>. The letter,
         written by Atchison, concluded that federal regulators were "harassing" Lincoln by being "unduly harsh." Grogan claims that Riegle told him a meeting
-    between Gray and the senators would occur. Because Riegle had no direct connection to Lincoln or ACC, he needed either Arizona Sens.<a href="/actors/senators/Dennis-DeConcini"> DeConcini</a> or John    <a href="/actors/senators/John-McCain">McCain</a> (R-AZ) to coordinate and invite him to it. Riegle claims he has no recollection of
+    between Gray and the senators would occur. Because Riegle had no direct connection to Lincoln or ACC, he needed either Arizona Senators <a href="/actors/senators/Dennis-DeConcini">Dennis DeConcini</a> (D) or <a href="/actors/senators/John-McCain">John McCain</a> (R) to coordinate and invite him to it. Riegle claims he has no recollection of
         this conversation. A little more than a week later (March 23rd), Keating organized a successful fundraiser at Detroit's Ponchetrain hotel, raising over
         $30,000 on Riegle's behalf.
     </p>
@@ -164,7 +164,7 @@ name: story
     </p>
 
     <p>
-    The first meeting, held on April 2nd in DeConcini's office, included Gray, as well as four senators: DeConcini, McCain, Cranston, and John    <a href="/actors/senators/John-Glenn">Glenn</a> (D-OH). (Years later, McCain recalled that DeConcini started the meeting with a
+    The first meeting, held on April 2nd in DeConcini's office, included Gray, as well as four senators: DeConcini, McCain, Cranston, and <a href="/actors/senators/John-Glenn">John Glenn</a> (D-Ohio). (Years later, McCain recalled that DeConcini started the meeting with a
         reference to "our friend at Lincoln." McCain characterized this as "an unfortunate choice of words, which Gray would remember and repeat publicly many
         times"). No aides attended this meeting. Gray claims that he was told not to bring any. This was uncommon; usually, he brought at least one aide, who would
         take notes at all meetings he attended. McCain received similar instructions to attend the meeting without his aide. McCain stationed his assistant
