--- a/src/views/actors/affiliates/ACC.hbs
+++ b/src/views/actors/affiliates/ACC.hbs
@@ -4,16 +4,17 @@ name: actors
 
 <h2>ACC</h2>
 
-<img src="/img/actors/american_continental_corp.png" alt="ACC" class="float-left">
+<img src="/img/actors/american_continental_corp.png" alt="American Continental Corporation" class="float-left">
+<p><u>American Continental Corporation</u></p>
 
-<p>American Continental Corporation (ACC) was an Ohio-chartered,
+<p>The American Continental Corporation (ACC) was an Ohio-chartered,
 Phoenix, Arizona-based real estate company that was active in the
 1970s and 1980s. It was created in 1978 as a spin-off of American
 Financial Group, and was intended to build residential homes. Its
-chairman was Charles Keating, who moved to Phoenix to run it. By
-1981, Keating had two thousand employees on his payroll, was one of
-the largest land developers in Arizona, benefiting from a boom in home
-building in Arizona.</p>
+chairman was <a href="/actors/affiliates/Charles-Keating">Charles Keating</a>,
+who moved to Phoenix to run it. By 1981, Keating had two thousand employees on
+his payroll, was one of the largest land developers in Arizona, benefiting from
+a boom in home building in Arizona.</p>
 
 <p>In February 1984, American Continental Corporation acquired the
 underperforming Lincoln Savings and Loan Association for $51 million.
