--- a/src/views/actors/affiliates/Jack-Atchison.hbs
+++ b/src/views/actors/affiliates/Jack-Atchison.hbs
@@ -7,7 +7,7 @@ name: actors
 <div class="right-column">
     <h2>Exhibits</h2>
     <ul>
-                <li><a href="/files/exhibits/Atchison/13.pdf">Proof of Payment</a></li>
+                <li><a href="/files/exhibits/Atchison/13.pdf">Background on Hiring and Salary</a></li>
             </ul>
     </div>
 
@@ -16,14 +16,16 @@ name: actors
 
 <p>Jack Atchison was the managing partner of the Phoenix office at Arthur Young,
 one of (what was then) the "big eight" U.S. accounting firms. While working at
-Arthur Young, he conducted a number of ACC’s external audits during the 1980s
-and penned the famous "Arthur Young letter," which outlined the reasons for
-his belief that the San Francisco regulators abused Lincoln S&L, an
-apparently viable institution.</p>
+Arthur Young, he conducted a number of <a href="/actors/affiliates/ACC">ACC’s</a>
+external audits during the 1980s and penned the famous
+<a href="/files/exhibits/Lincoln/%233 Arthur Young Letter 03-17-87.pdf">Arthur Young letter</a>,
+which outlined the reasons for his belief that the <a href="/actors/supporting_cast/SF-Regulators">
+San Francisco regulators</a> abused <a href="/actors/affiliates/Lincoln-Savings-and-Loan">Lincoln S&L</a>,
+an apparently viable institution.</p>
 
 <p>Many of the senators and their aides cited this letter as a major
-motivation to contact Gray and to inquire about the Bank Board’s exam
-on Keating’s behalf. In hearings on the collapse of Lincoln before the House
+motivation to contact Gray and to inquire about the <a href="/actors/supporting_cast/FHLBB">
+Bank Board’s</a> exam on Keating’s behalf. In hearings on the collapse of Lincoln before the House
 Committee on Banking, Finance, and Urban Affairs just prior to the Keating Five
 ones in the Senate, Mr. Atchison refused to testify on the basis of his Fifth
 Amendment rights.</p>
