--- a/src/views/actors/aides/Carolyn-Jordan.hbs
+++ b/src/views/actors/aides/Carolyn-Jordan.hbs
@@ -21,9 +21,12 @@ name: actors
 
 <img src="/img/actors/Carolyn-Jordan.png" alt="Carolyn Jordan" class="float-left">
 <p><u>Senator Cranston’s Chief Banking Aide</u></p>
-<p>Jordan joined Cranston’s banking staff in 1972. As early as
-December of 1984, she met with James Grogan (Lincoln S&L’s general
-counsel) to discuss concerns with proposed “direct investment” laws.
-Jordan says she had no knowledge of Cranston’s 1987 contact with
-Keating until long after the April meetings.</p>
+
+<p>Jordan joined <a href="/actors/senators/Alan-Cranston">Senator Cranston’s</a>
+banking staff in 1972. As early as December of 1984, she met with
+<a href="/actors/affiliates/James-Grogan">James Grogan</a>
+(<a href="/actors/affiliates/Lincoln-Savings-and-Loan">Lincoln S&L’s</a> general counsel)
+to discuss concerns with proposed “direct investment” laws. Jordan says she had no knowledge
+of Cranston’s 1987 contact with Keating until long after the April meetings.</p>
+
 <br clear="all">
