--- a/src/views/actors/aides/Gwendolyn-VanPaasschen.hbs
+++ b/src/views/actors/aides/Gwendolyn-VanPaasschen.hbs
@@ -23,11 +23,13 @@ name: actors
 
 <img src="/img/actors/Gwendolyn-VanPaasschen.png" alt="Gwendolyn VanPaasschen" class="float-left">
 <p><u>Senator McCain's Banking Aide</u>&nbsp;</p>
-<p>There is evidence that VanPaasschen warned McCain to “stay
-away from Keating.” Not only did his “high flying demeanor” put her
-off, but she also voiced discomfort with the way the meetings were set
+
+<p>There is evidence that VanPaasschen warned <a href="/actors/senators/John-McCain">
+Senator McCain</a> to “stay away from Keating.” Not only did his “high flying demeanor”
+put her off, but she also voiced discomfort with the way the meetings were set
 up. She was especially concerned with the request that McCain “not
 bring any aides to the [April] meeting[s]." Disregarding the request,
 McCain brought VanPaasschen; she was stationed outside the room
 where the meetings took place.</p>
+
 <br clear="all">
