--- a/src/views/actors/aides/Joy-Jacobson.hbs
+++ b/src/views/actors/aides/Joy-Jacobson.hbs
@@ -22,11 +22,11 @@ name: actors
 
 <img src="/img/actors/Joy-Jacobson.png" alt="Joy Jacobson" class="float-left">
 <p><u>Senator Cranston’s Chief Fundraiser</u></p>
-<p>In 1984, Jacobson began working for Cranston as a Senate staff
-member. In 1987, she shifted roles and became his “Fundraising
-Coordinator.” Jacobson was present at a number of the meetings
-attended by Cranston, Grogan, and Keating.</p>
 
-
+<p>In 1984, Jacobson began working for <a href="/actors/senators/Alan-Cranston">
+Senator Cranston</a> as a Senate staff member. In 1987, she shifted roles and
+became his “Fundraising Coordinator.” Jacobson was present at a number of the meetings
+attended by Cranston, <a href="/actors/affiliates/James-Grogan">James Grogan</a>,
+and <a href="/actors/affiliates/Charles-Keating">Charles Keating</a>.</p>
 
 <br clear="all">
