--- a/src/views/actors/aides/Laurie-Sedlmayr.hbs
+++ b/src/views/actors/aides/Laurie-Sedlmayr.hbs
@@ -20,15 +20,19 @@ name: actors
 
 <img src="/img/actors/Laurie-Sedlmayr.png" alt="Laurie Sedlmayr" class="float-left">
 <p><u>Senator DiConcini's Banking Aide</u></p>
+
 <p>In January of 1978, Sedlmayr began working full-time for
-DeConcini. Her first recollection of contact with Keating or ACC was in
-1984. Both evidence and her testimony suggest that, as early as
-December 1986, she warned DeConcini to “stay out of” the
-Keating/Gray feud. Still, she remained a key go-between player for
-Keating and DeConcini.</p>
-<p>On behalf of DeConcini and McCain, Sedlmayr prepared the
-memo to Senator Riegle, which invited him to attend the second
-meeting. McCain claimed that he and his staff had no knowledge of
-this memo, and Sedlmayr admits that she forgot to bring the memo to
+<a href="/actors/senators/Dennis-DeConcini">Senator DeConcini</a>. Her first
+recollection of contact with <a href="/actors/affiliates/Charles-Keating">
+Charles Keating</a> or <a href="/actors/affiliates/ACC">ACC</a> was in 1984.
+Both evidence and her testimony suggest that, as early as December 1986, she
+warned DeConcini to “stay out of” the Keating/<a href="/actors/supporting_cast/Ed-Gray">
+Ed Gray</a> feud. Still, she remained a key go-between player for Keating and DeConcini.</p>
+
+<p>On behalf of DeConcini and <a href="/actors/senators/John-McCain">Senator McCain</a>,
+Sedlmayr prepared the memo to <a href="/actors/senators/Don-Riegle">Senator Riegle</a>,
+which invited him to attend the second meeting. McCain claimed that he and his staff
+had no knowledge of this memo, and Sedlmayr admits that she forgot to bring the memo to
 McCain’s office to be signed before sending it to Riegle.</p>
+
 <br clear="all">
