--- a/src/views/actors/default.hbs
+++ b/src/views/actors/default.hbs
@@ -155,7 +155,7 @@ name: actors
 <div class="actor-panel">
 <h3>
     <a href="/actors/supporting_cast/James-Wright">
-        Speaker Wright    </a>
+        James Wright    </a>
 </h3>
 </div>
 
