--- a/src/views/actors/senators/John-Glenn.hbs
+++ b/src/views/actors/senators/John-Glenn.hbs
@@ -13,10 +13,10 @@ name: actors
 
     <h2>Exhibits</h2>
     <ul>
-                <li><a href="/files/exhibits/Glenn/%231 Glenn to Gray 06-20-84.pdf">Exhibit #1 Glenn to Gray 06-20-84</a></li>
-<li><a href="/files/exhibits/Glenn/%232 Glenn Office Memo 12-17-84.pdf">Exhibit #2 Glenn Office Memo 12-17-84</a></li>
-<li><a href="/files/exhibits/Glenn/%233 Glenn to Gray 12-17-84.pdf">Exhibit #3 Glenn to Gray 12-17-84</a></li>
-<li><a href="/files/exhibits/Glenn/%234 DeConcini and Glenn et al. to Gray 01-30-85.pdf">Exhibit #4 DeConcini and Glenn et al. to Gray 01-30-85</a></li>
+                <li><a href="/files/exhibits/Glenn/%231 Glenn to Gray 06-20-84.pdf">Exhibit #1: Glenn to Gray 06-20-84</a></li>
+<li><a href="/files/exhibits/Glenn/%232 Glenn Office Memo 12-17-84.pdf">Exhibit #2: Glenn Office Memo 12-17-84</a></li>
+<li><a href="/files/exhibits/Glenn/%233 Glenn to Gray 12-17-84.pdf">Exhibit #3: Glenn to Gray 12-17-84</a></li>
+<li><a href="/files/exhibits/Glenn/%234 DeConcini and Glenn et al. to Gray 01-30-85.pdf">Exhibit #4: DeConcini and Glenn et al. to Gray 01-30-85</a></li>
             </ul>
 
         <h2>Video</h2>
