--- a/src/views/actors/supporting_cast/Ed-Gray.hbs
+++ b/src/views/actors/supporting_cast/Ed-Gray.hbs
@@ -16,11 +16,11 @@ name: actors
         <h2>Exhibits</h2>
     <ul>
 
-                <li><a href="/files/exhibits/Gray/%231 Gray Statement 09-19-86.pdf">Exhibit #1 Gray Statement 09-19-86</a></li>
-                <li><a href="/files/exhibits/Gray/%232 Gray to Cirona 09-22-86.pdf">Exhibit #2 Gray to Cirona 09-22-86</a></li>
-                <li><a href="/files/exhibits/Gray/%233 Cirona to Gray 09-25-86.pdf">Exhibit #3 Cirona to Gray 09-25-86</a></li>
-                <li><a href="/files/exhibits/Gray/%234 Gray to Patriarca 06-02-88.pdf">Exhibit #4 Gray to Patriarca 06-02-88</a></li>
-                <li><a href="/files/exhibits/Gray/%235 Patriarca to Gray 07-14-88.pdf">Exhibit #5 Patriarca to Gray 07-14-88</a></li>
+                <li><a href="/files/exhibits/Gray/%231 Gray Statement 09-19-86.pdf">Exhibit #1: Gray Statement 09-19-86</a></li>
+                <li><a href="/files/exhibits/Gray/%232 Gray to Cirona 09-22-86.pdf">Exhibit #2: Gray to Cirona 09-22-86</a></li>
+                <li><a href="/files/exhibits/Gray/%233 Cirona to Gray 09-25-86.pdf">Exhibit #3: Cirona to Gray 09-25-86</a></li>
+                <li><a href="/files/exhibits/Gray/%234 Gray to Patriarca 06-02-88.pdf">Exhibit #4: Gray to Patriarca 06-02-88</a></li>
+                <li><a href="/files/exhibits/Gray/%235 Patriarca to Gray 07-14-88.pdf">Exhibit #5: Patriarca to Gray 07-14-88</a></li>
                 <li><a href="/files/evidence/22">Exhibit #6: Affidavit of Shannon Fairbanks, Chief of Staff of the FHLBB</a></li>
                 <li><a href="/files/evidence/23">Exhibit #7: Affidavit of Mary Ellen Taylor, Director of Congressional Relations for the FHLBB</a></li>
                 <li><a href="/files/exhibits/Gray/Black Transcript 04-10-87.pdf">Black Transcript 04-10-87</a></li>
@@ -37,13 +37,13 @@ name: actors
 <img src="/img/actors/Ed-Gray.png" alt="Ed Gray" class="float-left">
 <p><u>Edwin Gray (Bank Board Chairman)</u></p>
 
-<p>In 1984, Ed Gray was appointed chairman of the three-member Federal Home Loan Bank Board. <i>The Washington Post</i> described Gray:</p>
+<p>In 1984, Ed Gray was appointed chairman of the three-member <a href="/actors/supporting_cast/FHLBB">Federal Home Loan Bank Board</a>. <i>The Washington Post</i> described Gray:</p>
 
-<p style="margin-left: 40px">"Gray was neither an economist nor a businessman by profession, but rather a born pitchman and cheerleader. After a brief episode as a reporter, working in the Madrid bureau of United Press International during the early 1960s, he went into public relations and made a career of saying positive things about his employees. This decidedly average man--brown hair, square face, medium height and build--instinctively shunned controversy and conflict." (<i>The Washington Post</i>, June 11th, 1990).</p>
+<p><blockquote>"Gray was neither an economist nor a businessman by profession, but rather a born pitchman and cheerleader. After a brief episode as a reporter, working in the Madrid bureau of United Press International during the early 1960s, he went into public relations and made a career of saying positive things about his employees. This decidedly average man--brown hair, square face, medium height and build--instinctively shunned controversy and conflict." (<i>The Washington Post</i>, June 11th, 1990).</blockquote></p>
 
 <p>During his time on the Bank Board, Gray took a different stance than the rest of the industry regarding brokered accounts, cash reserves, and direct investment regulations. As early as December 1985, <a href="/actors/affiliates/Charles-Keating">Charles Keating</a>, owner of <a href="/actors/affiliates/ACC">ACC</a> and <a href="/actors/affiliates/Lincoln-Savings-and-Loan">Lincoln Savings and Loan</a>, attempted to hire Gray out of his Bank Board position. Gray, however, refused the offer and reported Keating to the Justice Department.</p>
 
-<p>On March 12th, 1986, the <a href="/actors/supporting_cast/FHLBB">FHLBB</a> began its first major examination of Lincoln in two years. The last examination, conducted six months after Keating acquired Lincoln, revealed "appraisal difficulties," "an overvaluation of capital," and "lack of an internal audit committee." Despite the fact that he had never spoken to or met Keating, and had no personal involvement in Lincoln's exam, The Washington Post ran a full-page story about a so-called "feud" between Keating and Gray. The September 1986 story claimed that Gray was prolonging regulations and abusing Lincoln because of a personal vendetta against Keating. Not knowing the origin of these claims, Gray requested an update from the <a href="/actors/supporting_cast/SF-Regulators">San Francisco regulators</a> conducting Lincoln's audit. Three days later he <a href="/files/exhibits/Gray/%234 Gray to Patriarca 06-02-88.pdf">received</a> the "Cirona Report"—a lengthy explanation of concerns (as outlined in the draft statement of Supervisory Concerns), along with details about how Keating impeded the examination. The FHLBB ended its fieldwork a few weeks later.</p>
+<p>On March 12th, 1986, the <a href="/actors/supporting_cast/FHLBB">FHLBB</a> began its first major examination of Lincoln in two years. The last examination, conducted six months after Keating acquired Lincoln, revealed "appraisal difficulties," "an overvaluation of capital," and "lack of an internal audit committee." Despite the fact that he had never spoken to or met Keating, and had no personal involvement in Lincoln's exam, The Washington Post ran a full-page story about a so-called "feud" between Keating and Gray. The September 1986 story claimed that Gray was prolonging regulations and abusing Lincoln because of a personal vendetta against Keating. Not knowing the origin of these claims, Gray requested an update from the <a href="/actors/supporting_cast/SF-Regulators">San Francisco regulators</a> conducting Lincoln's audit. Three days later he received the <a href="/files/exhibits/Gray/%234 Gray to Patriarca 06-02-88.pdf">"Cirona Report"</a> — a lengthy explanation of concerns (as outlined in the draft statement of Supervisory Concerns), along with details about how Keating impeded the examination. The FHLBB ended its fieldwork a few weeks later.</p>
 
 <p id="savings_and_loan_crisis">Not long after, the recapitalization bill that Gray was pushing through Congress was unexpectedly blocked by Speaker <a href="/actors/supporting_cast/James-Wright">Jim Wright</a> (Wright claimed that Gray's regulators were being too tough on Texas constituents of his - Empire Savings & Loans - and that he would not remove his legislative block unless Gray “called his dogs off”). Gray later said that this incident taught him that Congressional support was essential for advancing any of his reforms.</p>
 
@@ -57,7 +57,7 @@ name: actors
 
 <p>Gray called his office immediately after the meeting and told his staff to wait in his office so he could debrief them on the meeting. Two affidavits (Exhibit <a href="/files/evidence/22">6</a>, <a href="/files/evidence/23">7</a>) from Gray's staff members support Gray's account of that evening's meetings: “That the meeting was not arranged to hear his views but, instead, was an attempt at intimidation,” which was characterized as “inappropriate.” Gray stated that DeConcini took the lead in attempting to have the Bank Board modify or withdraw the rule about Lincoln and he expressed his outrage at the senator’s proposal. Despite these frustrations and allegations, Gray took no official action to address the DeConcini’s alleged conduct. Instead, when DeConcini called him a few days later to tell him that the senators would like to meet with the regulators, Gray put the two parties in touch.</p>
 
-<p>After coordinating the meeting between the regulators and the senators, Gray gave William Black, one of the three regulators who attended the meeting, instructions to take notes (these were later known as the ""<a href="/files/exhibits/Gray/Black Transcript 04-10-87.pdf">Black Transcript</a>"). Gray sent Riegle a copy of Black's transcript shortly after he received it. Gray says he did this “in fairness” to Riegle.</p>
+<p>After coordinating the meeting between the regulators and the senators, Gray gave William Black, one of the three regulators who attended the meeting, instructions to take notes (these were later known as the "<a href="/files/exhibits/Gray/Black Transcript 04-10-87.pdf">Black Transcript</a>"). Gray sent Riegle a copy of Black's transcript shortly after he received it. Gray says he did this “in fairness” to Riegle.</p>
 
 <p>Gray had no further contact with the senators regarding the regulation of Lincoln Savings & Loan. Gray says that none of his or the Bank Board's actions were affected or altered by the April meetings.</p>
 
@@ -65,6 +65,7 @@ name: actors
 
 <p>However, <a href="/actors/supporting_cast/Bill-Seidman">Bill Seidman</a> and <a href="/actors/supporting_cast/William-Proxmire">William Proxmire</a> took to defending Gray. Proxmire told the press that “in hindsight… he was right on almost every count.” Seidman said that Gray “likes being a hero. Here is a guy that was being massacred, and now he relishes being on the offensive. He wants to set the record straight. It's very important to him.”<a href="#section1"><sup>1</sup></a></p>
 
-<p id="section1"><sup>1</sup>Cranston, Seidman, and Proxmire quotes are from <a href="/files/evidence/49">this article</a>.</p>
+<hr>
+<p id="section1"><sup>1</sup> Cranston, Seidman, and Proxmire quotes are from <a href="/files/evidence/49">this article</a>.</p>
 
 <br clear="all">
