--- a/src/views/actors/supporting_cast/FHLBB.hbs
+++ b/src/views/actors/supporting_cast/FHLBB.hbs
@@ -18,6 +18,8 @@ name: actors
 <p>The FHLBs continue to exist today. While government-sponsored, they are privately-held enterprises owned by the member
   institutions they provide liquidity to. As a condition of receiving funds, the FHLBs regularly audit their members to ensure
   their solvency. (Since an FHLB is a cooperatively-owned business, every member has an interest in all others’ ability to stay
-  afloat). The study of an institution’s solvency is also known as a “bank exam,” which the FHLB-SF undertook on Lincoln S&L.</p>
+  afloat). The study of an institution’s solvency is also known as a “bank exam,” which the
+  <a href="/actors/supporting_cast/SF-Regulators">FHLB-SF</a> undertook on <a href="/actors/affiliates/Lincoln-Savings-and-Loan">
+  Lincoln S&L</a>.</p>
 
 <br clear="all">
