--- a/src/views/actors/supporting_cast/Lee-H-Henkel-Jr.hbs
+++ b/src/views/actors/supporting_cast/Lee-H-Henkel-Jr.hbs
@@ -12,14 +12,17 @@ name: actors
 </ul>
 </div>
 
+<img src="/img/actors/Lee-Henkel.png" alt="Lee Henkel" class="float-left">
 <p><u>FHLBB Board Member</u></p>
 
-<p>The Reagan Administration appointed Henkel to the FHLBB in late
-1986 after lobbying by Keating. Henkel was named through a recess
-appointment, meaning that he did not require Senate confirmation. He
-proposed new regulations in his first meeting on the FHLBB. Many saw
+<p>The Reagan Administration appointed Henkel to the
+<a href="/actors/supporting_cast/FHLBB">FHLBB</a> in late 1986 after lobbying by
+<a href="/actors/affiliates/Charles-Keating">Charles Keating</a>. Henkel was named
+through a recess appointment, meaning that he did not require Senate confirmation.
+He proposed new regulations in his first meeting on the FHLBB. Many saw
 these new rules, while technically applicable to all Federally-chartered
-S&Ls, as specifically targeted to benefit Lincoln. Henkel vigorously
+S&Ls, as specifically targeted to benefit
+<a href="/actors/affiliates/Lincoln-Savings-and-Loan">Lincoln</a>. Henkel vigorously
 denies these allegations. He resigned from the FHLBB only five months
 later, shortly after it was revealed that he had several large loans from
 Lincoln, saying he needed to protect his family from the intense media
@@ -33,4 +36,5 @@ litigation.</p>
 <hr />
 
 <p id="section1"><sup>1</sup>http://web.mit.edu/~mkgray/afs/bar/afs/net/user/tytso/usenet/americast/wpost/1435</p>
+
 <br clear="all">
