--- a/src/views/actors/supporting_cast/SF-Regulators.hbs
+++ b/src/views/actors/supporting_cast/SF-Regulators.hbs
@@ -21,17 +21,15 @@ name: actors
 CA<br /></p><p>
 
 These regulators were summoned to Washington D.C. to discuss the
-FHLB-SF extended examination of Lincoln S&L. The four men were
-present at the April 9th meeting and contend that Lincoln was
-exaggerating the value of properties in which it had invested or on
-which it had made loans.</p><p>
+FHLB-SF extended examination of <a href="/actors/affiliates/Lincoln-Savings-and-Loan">
+Lincoln S&L</a>. The four men were present at the April 9th meeting and contend that Lincoln was
+exaggerating the value of properties in which it had invested or on which it had made loans.</p><p>
 
-Black’s boss, FHLBB Chairman Ed Gray, asked Black to report back to
-him about the April 9th meeting. Black took the extensive notes that
-formed the basis for the infamous "<a href="
-http://keatingfive.org/files/exhibits/Gray/Black%20Transcript%2004-10-87.pdf">
-Black Transcript</a>." While many questioned exactly how Mr. Black was able to
-take such detailed notes, the substance of these notes was not significantly
-challenged by any of the witnesses to the Senate Ethics Committee.</p>
+Black’s boss, FHLBB Chairman <a href="/actors/supporting_cast/Ed-Gray">Ed Gray</a>, asked Black to
+report back to him about the April 9th meeting. Black took the extensive notes that formed the basis
+for the infamous "<a href="http://keatingfive.org/files/exhibits/Gray/Black%20Transcript%2004-10-87.pdf">
+Black Transcript</a>." While many questioned exactly how Mr. Black was able to take such detailed notes,
+the substance of these notes was not significantly challenged by any of the witnesses to the Senate Ethics
+Committee.</p>
 
 <br clear="all">
