--- a/src/views/actors/supporting_cast/William-Proxmire.hbs
+++ b/src/views/actors/supporting_cast/William-Proxmire.hbs
@@ -12,11 +12,11 @@ During that time, he served as chairman of the Committee on Banking, Housing and
 from 1975 to 1981 as well as from 1987 to 1989. Proxmire refused campaign contributions during
 his 31 years in the Senate. After his retirement in 1989, Proxmire stayed active as a syndicated
 columnist and broadcaster, commenting on the Keating Five and other scandals of the day. He was
-<a href="/files/evidence/49">adamant</a> that the system was to blame. He believed that – mistakenly
+<a href="/files/evidence/50">adamant</a> that the system was to blame. He believed that – mistakenly
 or not – senators thought they had to raise substantial sums of money to have a shot at re-election.
 Proxmire also blamed the regulators, who he viewed as neglectful in their duties, so that the Senate
 and nation did not appreciate the extent of the problem until it was too late. At the end of his term,
 Proxmire began to push for Congressional <a href="/files/evidence/48">intervention</a> in the crisis,
-regretting that he had not acted earlier and done more.</p>
+<a href="/files/evidence/47">regretting</a> that he had not acted earlier and done more.</p>
 
 <br clear="all">
