--- a/src/views/default.hbs
+++ b/src/views/default.hbs
@@ -5,31 +5,30 @@ name: home
   <img src="/img/banner.png" alt="Keating Five Banner" style="max-width: 100%;" />
 </div>
 
-<p>Welcome to "Understanding the Keating Five," the only comprehensive 
+<p>Welcome to "Understanding the Keating Five," the only comprehensive
 website on the infamous Keating Five scandal. What started as a meeting
 between a group of U.S. senators and the head of the Federal Home Loan Bank Board
 ended with a lengthy and nationally-televised hearing of the Senate Ethics
-Committee. The hearings investigated the relationship between savings & loan (S&L)
+Committee. The hearings investigated the relationship between savings and loan (S&L)
 tycoon Charles Keating and five senators. They raise important
 issues about ethics, representation, and democracy. Did some (or all) of the
 senators have good reasons for getting involved in this matter? Did some (or
 all) of these senators act improperly? What are the ethical limits of “constituent
 service?” How is the analysis of these issues affected by the existence of campaign
 contributions?</p>
-<p>“Understanding the Keating Five” provides a wealth of information about the 
-S&L collapse and the stories of specific actors in the case. To start, 
-it is recommended that the reader look first to the “Overall Story” and 
-“70 Minutes: A First Look into the Hearings” to get a sense of sequencing and 
-tone. From there, the site provides individual background stories, timelines, and 
-selected excerpts of testimony from the hearings (in both written and video form) 
-for each of the senators and other major actors. Some facts are agreed upon by all 
-parties in the case, including the remarkably detailed minutes of the meeting with 
-the San Francisco regulators, while others are hotly contested. It is up to you to 
-weigh the evidence after comparing and contrasting the various testimonies.</p>
-<p>The “Related Issues” section provides background reading on theories
-of representation, the S&L industry's collapse, and the appropriate limits of
-constituent service. The “Enduring Issues” section highlights broader issues from
-this case that are still relevant today.</p>
+
+<p>“Understanding the Keating Five” provides a wealth of information about the
+S&L collapse and the stories of specific actors in the case. To start,
+it is recommended that the reader look first to the “Overall Story” and
+“70 Minutes: A First Look into the Hearings” to get a sense of sequencing and
+tone. From there, the site provides individual background stories, timelines, and
+selected excerpts of testimony from the hearings (in both written and video form)
+for each of the senators and other important actors. The "Enduring Issues" and
+"Additional Information" sections give you broader context for the questions raised
+by the case. Some facts are agreed upon by all parties, including the remarkably
+detailed minutes of the meeting with the San Francisco regulators, while others are
+hotly contested. It is up to you to weigh the evidence after comparing and contrasting
+the various facets of the story of the Keating Five.</p>
 
 <div class="center">
   <h3>A First Look at the Hearings</h3>
