--- a/src/views/evidence.hbs
+++ b/src/views/evidence.hbs
@@ -11,7 +11,7 @@ name: evidence
     FHLBB – Federal Home Loan Bank Board</a><br />
     FSLIC – Federal Savings and Loan Insurance Corporation<br />
     RTC – Resolution Trust Corporation<br />
-    S&L – Savings & loan bank (i.e. thrift bank)<br />
+    S&L – Savings and loan bank (i.e. thrift bank)<br />
   </div>
   <div class="evidence-wrapper">
     <div class="evidence-panel">
