--- a/src/views/actors/senators/Alan-Cranston.hbs
+++ b/src/views/actors/senators/Alan-Cranston.hbs
@@ -7,18 +7,18 @@ name: actors
 <div class="right-column">
     <h2>Exhibits</h2>
     <ul>
-                <li><a href="/files/exhibits/Cranston/%231 Cranston to Gray 06-07-89.pdf">Exhibit #1 Cranston to Gray 06-07-89</a></li>
-                <li><a href="/files/exhibits/Cranston/%232 Gray's Response to (1) 06-15-89.pdf">Exhibit #2 Gray's Response to (1) 06-15-89</a></li>
-                <li><a href="/files/exhibits/Cranston/%233 Keating Lobbying to Kim 03-01-88.pdf">Exhibit #3 Keating Lobbying to Kim 03-01-88</a></li>
-                <li><a href="/files/exhibits/Cranston/%234 Cranston to Gray DI Regs. 07-11-84.pdf">Exhibit #4 Cranston to Gray DI Regs. 07-11-84</a></li>
-                <li><a href="/files/exhibits/Cranston/%235 Cranston to Gray DI Regs. 01-31-85.pdf">Exhibit #5 Cranston to Gray DI Regs. 01-31-85</a></li>
-                <li><a href="/files/exhibits/Cranston/%236 Cranston Letter to the Editor WSJ 06-15-89.pdf">Exhibit #6 Cranston Letter to the Editor WSJ 06-15-89</a></li>
-                <li><a href="/files/exhibits/Cranston/%237 Cranston Press Release 01-19-90.pdf">Exhibit #7 Cranston Press Release 01-19-90</a></li>
-                <li><a href="/files/exhibits/Cranston/%238 Cranston Press Release 01-22-90.pdf">Exhibit #8 Cranston Press Release 01-22-90</a></li>
-                <li><a href="/files/exhibits/Cranston/%239 FHLBB Member Letter in Support DeConcini and Cranston 06-21-89.pdf">Exhibit #9 FHLBB Member Letter in Support DeConcini and Cranston 06-21-89</a></li>
-                <li><a href="/files/exhibits/Cranston/%2310 Grogan to Jacobson Gray Recusal 02-25-87.pdf">Exhibit #10 Grogan to Jacobson Gray Recusal 02-25-87</a></li>
-                <li><a href="/files/exhibits/Cranston/%2311 Cranston Office Memo 05-06-88.pdf">Exhibit #11 Cranston Office Memo 05-06-88</a></li>
-                <li><a href="/files/exhibits/Cranston/%2312 Cranston Charges Gray WSJ 03-22-84.pdf">Exhibit #12 Cranston Charges Gray WSJ 03-22-84</a></li>
+                <li><a href="/files/exhibits/Cranston/%231 Cranston to Gray 06-07-89.pdf">Exhibit #1: Cranston to Gray 06-07-89</a></li>
+                <li><a href="/files/exhibits/Cranston/%232 Gray's Response to (1) 06-15-89.pdf">Exhibit #2: Gray's Response to (1) 06-15-89</a></li>
+                <li><a href="/files/exhibits/Cranston/%233 Keating Lobbying to Kim 03-01-88.pdf">Exhibit #3: Keating Lobbying to Kim 03-01-88</a></li>
+                <li><a href="/files/exhibits/Cranston/%234 Cranston to Gray DI Regs. 07-11-84.pdf">Exhibit #4: Cranston to Gray DI Regs. 07-11-84</a></li>
+                <li><a href="/files/exhibits/Cranston/%235 Cranston to Gray DI Regs. 01-31-85.pdf">Exhibit #5: Cranston to Gray DI Regs. 01-31-85</a></li>
+                <li><a href="/files/exhibits/Cranston/%236 Cranston Letter to the Editor WSJ 06-15-89.pdf">Exhibit #6: Cranston Letter to the Editor WSJ 06-15-89</a></li>
+                <li><a href="/files/exhibits/Cranston/%237 Cranston Press Release 01-19-90.pdf">Exhibit #7: Cranston Press Release 01-19-90</a></li>
+                <li><a href="/files/exhibits/Cranston/%238 Cranston Press Release 01-22-90.pdf">Exhibit #8: Cranston Press Release 01-22-90</a></li>
+                <li><a href="/files/exhibits/Cranston/%239 FHLBB Member Letter in Support DeConcini and Cranston 06-21-89.pdf">Exhibit #9: FHLBB Member Letter in Support DeConcini and Cranston 06-21-89</a></li>
+                <li><a href="/files/exhibits/Cranston/%2310 Grogan to Jacobson Gray Recusal 02-25-87.pdf">Exhibit #10: Grogan to Jacobson Gray Recusal 02-25-87</a></li>
+                <li><a href="/files/exhibits/Cranston/%2311 Cranston Office Memo 05-06-88.pdf">Exhibit #11: Cranston Office Memo 05-06-88</a></li>
+                <li><a href="/files/exhibits/Cranston/%2312 Cranston Charges Gray WSJ 03-22-84.pdf">Exhibit #12: Cranston Charges Gray WSJ 03-22-84</a></li>
                 <li><a href="/files/evidence/16">Exhibit #13: Memo, Jacobson to Cranston</a></li>
                 <li><a href="/files/evidence/25">Exhibit #14: Memo, Jacobson to Cranston, Fundraising</a></li>
             </ul>
