--- a/src/views/actors/senators/Dennis-DeConcini.hbs
+++ b/src/views/actors/senators/Dennis-DeConcini.hbs
@@ -14,20 +14,20 @@ name: actors
 
 
     <h2>Exhibits</h2>
-    <ul><li><a href="/files/exhibits/DeConcini/%231 DeConcini to Gray 06-02-89.pdf">Exhibit #1 DeConcini to Gray 06-02-89</a></li>
-<li><a href="/files/exhibits/DeConcini/%232 Gray's Response to (1) 06-05-89.pdf">Exhibit #2 Gray's Response to (1) 06-05-89</a></li>
-<li><a href="/files/exhibits/DeConcini/%233 DeConcini Statement 11-09-89.pdf">Exhibit #3 DeConcini Statement 11-09-89</a></li>
-<li><a href="/files/exhibits/DeConcini/%234 DeConcini to Cranston 06-18-84.pdf">Exhibit #4 DeConcini to Cranston 06-18-84</a></li>
-<li><a href="/files/exhibits/DeConcini/%235 DeConcini Office Memo 01-03-85.pdf">Exhibit #5 DeConcini Office Memo 01-03-85</a></li>
-<li><a href="/files/exhibits/DeConcini/%236 DeConcini and Glenn et al. to Gray 01-30-85.pdf">Exhibit #6 DeConcini and Glenn et al. to Gray 01-30-85</a></li>
-<li><a href="/files/exhibits/DeConcini/%237 Sedlmayr-DeConcini Memo 02-17-89.pdf">Exhibit #7 Sedlmayr-DeConcini Memo 02-17-89</a></li>
-<li><a href="/files/exhibits/DeConcini/%238 Sedlmayr-DeConcini Memo 03-10-88.pdf">Exhibit #8 Sedlmayr-DeConcini Memo 03-10-88</a></li>
-<li><a href="/files/exhibits/DeConcini/%239 Sedlmayr-DeConcini 03-19-87.pdf">Exhibit #9 Sedlmayr-DeConcini 03-19-87</a></li>
-<li><a href="/files/exhibits/DeConcini/%2310 Sedlmayr-DeConcini Memo 04-01-87.pdf">Exhibit #10 Sedlmayr-DeConcini Memo 04-01-87</a></li>
-<li><a href="/files/exhibits/DeConcini/%2311 DeConcini-Sedlmayr Fallout 06-14-89.pdf">Exhibit #11 DeConcini-Sedlmayr Fallout 06-14-89</a></li>
-<li><a href="/files/exhibits/DeConcini/%2312 Sedlmayr-DeConcini Article About Keating 06-29-85.pdf">Exhibit #12 Sedlmayr-DeConcini Article About Keating 06-29-85</a></li>
-<li><a href="/files/exhibits/DeConcini/%2313 Keating to DeConcini (1989).pdf">Exhibit #13 Keating to DeConcini (1989)</a></li>
-<li><a href="/files/exhibits/DeConcini/%2314 FHLBB Member Letter in Support DeConcini and Cranston 06-21-89.pdf">Exhibit #14 FHLBB Member Letter in Support DeConcini and Cranston 06-21-89</a></li>
+    <ul><li><a href="/files/exhibits/DeConcini/%231 DeConcini to Gray 06-02-89.pdf">Exhibit #1: DeConcini to Gray 06-02-89</a></li>
+<li><a href="/files/exhibits/DeConcini/%232 Gray's Response to (1) 06-05-89.pdf">Exhibit #2: Gray's Response to (1) 06-05-89</a></li>
+<li><a href="/files/exhibits/DeConcini/%233 DeConcini Statement 11-09-89.pdf">Exhibit #3: DeConcini Statement 11-09-89</a></li>
+<li><a href="/files/exhibits/DeConcini/%234 DeConcini to Cranston 06-18-84.pdf">Exhibit #4: DeConcini to Cranston 06-18-84</a></li>
+<li><a href="/files/exhibits/DeConcini/%235 DeConcini Office Memo 01-03-85.pdf">Exhibit #5: DeConcini Office Memo 01-03-85</a></li>
+<li><a href="/files/exhibits/DeConcini/%236 DeConcini and Glenn et al. to Gray 01-30-85.pdf">Exhibit #6: DeConcini and Glenn et al. to Gray 01-30-85</a></li>
+<li><a href="/files/exhibits/DeConcini/%237 Sedlmayr-DeConcini Memo 02-17-89.pdf">Exhibit #7: Sedlmayr-DeConcini Memo 02-17-89</a></li>
+<li><a href="/files/exhibits/DeConcini/%238 Sedlmayr-DeConcini Memo 03-10-88.pdf">Exhibit #8: Sedlmayr-DeConcini Memo 03-10-88</a></li>
+<li><a href="/files/exhibits/DeConcini/%239 Sedlmayr-DeConcini 03-19-87.pdf">Exhibit #9: Sedlmayr-DeConcini 03-19-87</a></li>
+<li><a href="/files/exhibits/DeConcini/%2310 Sedlmayr-DeConcini Memo 04-01-87.pdf">Exhibit #10: Sedlmayr-DeConcini Memo 04-01-87</a></li>
+<li><a href="/files/exhibits/DeConcini/%2311 DeConcini-Sedlmayr Fallout 06-14-89.pdf">Exhibit #11: DeConcini-Sedlmayr Fallout 06-14-89</a></li>
+<li><a href="/files/exhibits/DeConcini/%2312 Sedlmayr-DeConcini Article About Keating 06-29-85.pdf">Exhibit #12: Sedlmayr-DeConcini Article About Keating 06-29-85</a></li>
+<li><a href="/files/exhibits/DeConcini/%2313 Keating to DeConcini (1989).pdf">Exhibit #13: Keating to DeConcini (1989)</a></li>
+<li><a href="/files/exhibits/DeConcini/%2314 FHLBB Member Letter in Support DeConcini and Cranston 06-21-89.pdf">Exhibit #14: FHLBB Member Letter in Support DeConcini and Cranston 06-21-89</a></li>
                 <li><a href="/files/evidence/18">Exhibit #15: Invitation, Deconcini (McCain) to Riegle</a></li>
 
             </ul>
@@ -57,6 +57,6 @@ name: actors
 
 <p>One of the San Francisco regulators referred to DeConcini as "the master of ceremonies" for the April 9th meeting. There is evidence that, when he emerged, he called Keating and told him not to expect much from the Bank Board.</p>
 
-<p>This was not the end of DeConcini and Keating’s relationship. Keating's friends, family, and employees raised $48,000 for DeConcini's 1988 campaign. (The entire campaign cost $3.2 million). DeConcini met several times with Keating’s attorney, <a href="/actors/affiliates/James-Grogan">Jim Grogan</a>, regarding the sale of Lincoln after the company filed for bankruptcy.</p>
+<p>This was not the end of DeConcini and Keating’s relationship. Keating's friends, family, and employees raised $48,000 for DeConcini's 1988 campaign. (The entire campaign cost $3.2 million). DeConcini met several times with Keating’s attorney, <a href="/actors/affiliates/James-Grogan">James Grogan</a>, regarding the sale of Lincoln after the company filed for bankruptcy.</p>
 
 <br clear="all">
