--- a/src/views/actors/supporting_cast/James-Wright.hbs
+++ b/src/views/actors/supporting_cast/James-Wright.hbs
@@ -6,11 +6,12 @@ name: actors
 
 <img src="/img/actors/SpeakerWright.jpg" alt="Speaker Wright" class="float-left"><br />
 <p><u>Texas Congressman and Speaker of the House</u></p>
-<p>Wright was a Democratic U.S. Congressman from Texas who
+
+<p>James Wright was a Democratic U.S. Congressman from Texas who
 served for 34 years in the U.S. House of Representatives and was the
 Speaker from January 1987 to June 1989. He resigned to avoid being
 found guilty by a House committee following his involvement in several
-scandals. One of the more prominent ones was the <a href="Ed-Gray#savings_and_loan_crisis">savings and loan
-crisis</a>.</p>
+scandals. One of the more prominent ones was the <a href="Ed-Gray#savings_and_loan_crisis">
+savings and loan crisis</a>.</p>
 
 <br clear="all">
