2018 video and link updates
batch #6

--- a/src/views/actors/aides/Laurie-Sedlmayr.hbs
+++ b/src/views/actors/aides/Laurie-Sedlmayr.hbs
@@ -26,8 +26,8 @@ name: actors
 recollection of contact with <a href="/actors/affiliates/Charles-Keating">
 Charles Keating</a> or <a href="/actors/affiliates/ACC">ACC</a> was in 1984.
 Both evidence and her testimony suggest that, as early as December 1986, she
-warned DeConcini to “stay out of” the Keating/<a href="/actors/supporting_cast/Ed-Gray">
-Ed Gray</a> feud. Still, she remained a key go-between player for Keating and DeConcini.</p>
+warned DeConcini to “stay out of” the Keating/<a href="/actors/supporting_cast/Ed-Gray">Ed Gray</a>
+feud. Still, she remained a key go-between player for Keating and DeConcini.</p>
 
 <p>On behalf of DeConcini and <a href="/actors/senators/John-McCain">Senator McCain</a>,
 Sedlmayr prepared the memo to <a href="/actors/senators/Don-Riegle">Senator Riegle</a>,
