--- a/src/views/videos/Keating - Part II.hbs
+++ b/src/views/videos/Keating - Part II.hbs
@@ -5,12 +5,12 @@ name: actors
   <video controls><source src="/files/videos/cut/program.8571.MP4-M20.2475.119.mp4" type="video/mp4"></video>
   <div class="text-transcript">
     <!--<h4>Insert transcript here</h4>-->
-    <p>Mr. LAMB: Harrisburg, Pennsylvania – you’re next.</p>
-    <p>CALLER: Yes, Mr. Keating–</p>
-    <p>Mr. KEATING: Yes.</p>
-    <p>CALLER: Ok, I have two questions for you. You gave an awful lot of money to five U.S. Senators; you gave money to McCain and DeConcini of Arizona, where you’re from, Senator John Glenn of Ohio, Senator Rigle, who’s the chairman of the committee – the banking committee – and Senator Cranston of California.</p>
+    <p><b>Mr. LAMB:</b> Harrisburg, Pennsylvania – you’re next.</p>
+    <p><b>CALLER:</b> Yes, Mr. Keating–</p>
+    <p><b>Mr. KEATING:</b> Yes.</p>
+    <p><b>CALLER:</b> Ok, I have two questions for you. You gave an awful lot of money to five U.S. Senators; you gave money to McCain and DeConcini of Arizona, where you’re from, Senator John Glenn of Ohio, Senator Rigle, who’s the chairman of the committee – the banking committee – and Senator Cranston of California.</p>
     <p>My first question is why give so much money to these individuals; was it to influence their vote? And my second question is this: Do you think that their involvement in the, this savings and loan scandal, if you will, will adversely affect their political careers?</p>
-    <p>Mr. KEATING: Well, the second question, I don’t really know the answer. The first question is, I’ve been a fundraiser all of my life. We have raised funds for homeless people, people without shelter, for the last 10, 15, 20 years. Whether it’s for children in New York or the poor people on the streets of Cincinnati, Ohio or Phoenix, Arizona, for Mother Teresa’s “Dead and Dying,” we’ve raised big money. And the way you do that, as a fundraiser, is you go to a lot of people, and you collect a little bit of money from a lot of people. That’s what also I did when I stated representing some people in Cincinnati who were running for political office, and I’ve just been a fundraiser.</p>
+    <p><b>Mr. KEATING:</b> Well, the second question, I don’t really know the answer. The first question is, I’ve been a fundraiser all of my life. We have raised funds for homeless people, people without shelter, for the last 10, 15, 20 years. Whether it’s for children in New York or the poor people on the streets of Cincinnati, Ohio or Phoenix, Arizona, for Mother Teresa’s “Dead and Dying,” we’ve raised big money. And the way you do that, as a fundraiser, is you go to a lot of people, and you collect a little bit of money from a lot of people. That’s what also I did when I stated representing some people in Cincinnati who were running for political office, and I’ve just been a fundraiser.</p>
     <p>You collect the legal limits as often as you can, and less when you can, and you raise what you’re calling a lot of money and you turn it over to the candidate, so he can run for office. He can represent the people who think like he does and think like you do. And that’s what I did. Every article I read virtually says, “Keating gave the Senators a million-two” – I collected a million-two. My part of that was what the legal limit was, one- or two-thousand dollars when the occasion arose.</p>
   </div>
 </div>
