Set width of subtitle column

--- a/src/css/default.styl
+++ b/src/css/default.styl
@@ -132,12 +132,16 @@ div#footer-content table td {
   white-space: nowrap;
 }
 
+.news-table th {
+  text-align: unset;
+}
+
 .news-table td {
   border: 1px solid black;
 }
 
-.news-table th {
-  text-align: unset;
+.news-table td:nth-child(2) {
+  width: 50%;
 }
 
 .text-transcript {
