Align additional information page

--- a/src/css/default.styl
+++ b/src/css/default.styl
@@ -132,17 +132,14 @@ div#footer-content table td {
   white-space: nowrap;
 }
 
-.news-table th {
-  text-align: unset;
-}
-
-.news-table td {
-  border: 1px solid black;
-}
-
-.news-table td:nth-child(2) {
-  width: 50%;
-}
+.news-table
+  text-align: center
+  th
+    text-align: unset
+  td
+    border: 1px solid black
+  td:nth-child(2)
+    width: 50%;
 
 .text-transcript {
   height: 480px;
