Correct DeConcini on Sedlmayr

--- a/src/views/actors/aides/Laurie-Sedlmayr.hbs
+++ b/src/views/actors/aides/Laurie-Sedlmayr.hbs
@@ -19,7 +19,7 @@ name: actors
     </div>
 
 <img src="/img/actors/Laurie-Sedlmayr.png" alt="Laurie Sedlmayr" class="float-left">
-<p><u>Senator DiConcini's Banking Aide</u></p>
+<p><u>Senator DeConcini's Banking Aide</u></p>
 
 <p>In January of 1978, Sedlmayr began working full-time for
 <a href="/actors/senators/Dennis-DeConcini">Senator DeConcini</a>. Her first
