2018 video and link updates
Minor corrections

--- a/src/views/actors/aides/Gwendolyn-VanPaasschen.hbs
+++ b/src/views/actors/aides/Gwendolyn-VanPaasschen.hbs
@@ -17,7 +17,7 @@ name: actors
                 <!--<li><a href="https://library.brown.edu/reserves/student/student.php?task=begin&semesterid=37&term=201310">VanPaasschen - Part I</a> (Good Government students only)</li>-->
                 <li><a href="/videos/VanPaasschen - Part I">VanPaasschen - Part I</a></li>
                 <li><a href="/videos/VanPaasschen - Part II">VanPaasschen - Part II</a></li>
-                <li><a href="/videos/VanPaasschen - Part III">VanPaasschen - Part II</a></li>
+                <li><a href="/videos/VanPaasschen - Part III">VanPaasschen - Part III</a></li>
             </ul>
     </div>
 
