--- a/src/views/actors/aides/Laurie-Sedlmayr.hbs
+++ b/src/views/actors/aides/Laurie-Sedlmayr.hbs
@@ -7,8 +7,8 @@ name: actors
 <div class="right-column">
         <h2>Testimony</h2>
     <ul>
-                <li><a href="/files/evidence/39">Testimony - Laurie Sedlmayr, Senator DeConcini's Banking Aide, Part 1</a></li>
-                <li><a href="/files/evidence/40">Testimony - Laurie Sedlmayr, Senator DeConcini's Banking Aide, Part 2</a></li>
+                <li><a href="/files/evidence/39">Testimony - Laurie Sedlmayr, Senator DeConcini's Banking Aide, Part I</a></li>
+                <li><a href="/files/evidence/40">Testimony - Laurie Sedlmayr, Senator DeConcini's Banking Aide, Part II</a></li>
             </ul>
 
         <h2>Video</h2>
